--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
 
 a {
   text-decoration: none;
+  display: block;
 }
 
 ul {
@@ -16,6 +17,16 @@ ul {
 
 img {
   display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 .container {
   width: 1158px;
@@ -59,12 +70,31 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding: 24px 0 24px;
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
+
+.current {
+  position: relative;
+  color: #404bbf;
+}
+.current::after {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  content: "";
+  background-color: #404bbf;
+  border-radius: 2px;
+  width: 100%;
+  height: 4px;
+}
+
 .nav-header:hover,
 .nav-header:focus {
   color: #404bbf;
 }
+
 .address {
   font-style: normal;
   margin-left: auto;
@@ -78,6 +108,9 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .address-item:hover,
 .address-item:focus {
@@ -114,7 +147,6 @@ img {
   letter-spacing: 0.04em;
   color: #ffffff;
   cursor: pointer;
-  display: block;
   min-width: 169px;
   height: 56px;
 }
@@ -137,9 +169,6 @@ img {
 .section-two-list {
   display: flex;
   gap: 24px;
-  width: 1158px;
-  padding: 0 15px 0 15px;
-  margin: auto;
 }
 
 .visually-hidden {
@@ -156,14 +185,19 @@ img {
 }
 
 .section-two-list-item {
-  margin-right: 24px;
   width: calc((100% - 72px) / 4);
 }
 
-.section-two-list:last-child {
-  margin-right: 0;
+.icons {
+  width: 100%;
+  height: 112px;
+  background-color: #f4f4fd;
+  border: 1px;
+  border-color: #8e8f99;
+  border-radius: 4px;
 }
-.section-header-three {
+
+.s-header-three {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -197,9 +231,14 @@ img {
   display: flex;
   gap: 24px;
 }
-.s-three-list:first-child {
-  width: calc((100% - 72px) / 4);
-  border-radius: 0px 0px 4px 4px;
+
+.section-header-three {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .s-three-list:last-child {
@@ -208,6 +247,7 @@ img {
 .s-three-list-item {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 48px) / 3);
 }
 
 .worker-info {
@@ -266,8 +306,8 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  /* padding-top: 120px;
+  padding-bottom: 120px; */
   margin-bottom: 8px;
 }
 .section-four-p {
@@ -289,13 +329,59 @@ img {
 }
 
 .logo-footer {
-  display: inline-block;
   margin-bottom: 16px;
+  color: #4d5ae5;
+  font-family: Raleway, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-right: 76px;
+  display: inline-block;
 }
 .footer-text {
-  display: inline-block;
   color: var(--CLOUD, #f4f4fd);
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
 }
+.icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 8px;
+}
+
+.icon-link {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+.icon-icon {
+  fill: #e7e9fc;
+  eight: 16px;
+  width: 16px;
+}
+
+
+.social {
+  width: 208px;
+  display: block;
+  margin: auto;
+ 
+}
+
+.social-text {
+font-family: Roboto;
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0.02em;
+text-align: left;
+t}
