--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,8 @@ p {
 /* HEADER */
 .header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .navigation {
   display: flex;
@@ -322,6 +324,8 @@ p {
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
+  display: flex;
+  align-items: baseline;
 }
 
 .logo-blu-footer {
@@ -369,19 +373,17 @@ p {
   width: 16px;
 }
 
-
 .social {
   width: 208px;
   display: block;
   margin: auto;
- 
 }
 
 .social-text {
-font-family: Roboto;
-font-size: 16px;
-font-weight: 500;
-line-height: 24px;
-letter-spacing: 0.02em;
-text-align: left;
-t}
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+}
