--- a/css/styles.css
+++ b/css/styles.css
@@ -115,8 +115,9 @@ p {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .address-item:hover,
 .address-item:focus {
   color: #404bbf;
