--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,38 @@ p {
   border: 1px;
   border-color: #8e8f99;
   border-radius: 4px;
+  margin-bottom: 8px; 
+}
+
+.icon-list {
+ display: flex;
+ justify-content: center; 
+ gap: 24px; 
+}
+
+.icon-link {
+ width: 40px;
+ height: 40px;
+ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.link-icon {
+   width: 100%;
+   height: 100%;
+   background-color: color: var(#4d5ae5);
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+.link-icon:hover,
+.link-icon:focus {
+background-color: #404bbf;  
+}
+
+.icon-icon {
+   fill: var(#f4f4fd); 
 }
 
 .s-header-three {
@@ -374,6 +406,12 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-bottom: 100px;
   display: flex;
   align-items: baseline;
+}
+
+.footer-container {
+   display: flex;
+   align-items: baseline;
+   margin-right: 120px;
 }
 
 .logo-blu-footer {
