--- a/css/styles.css
+++ b/css/styles.css
@@ -233,7 +233,7 @@ p {
 .link-icon {
    width: 100%;
    height: 100%;
-   background-color: color: var(#4d5ae5);
+   background-color: color var(#4d5ae5);
    border-radius: 50%;
    display: flex;
    align-items: center;
@@ -453,10 +453,11 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: #4d5ae5;
   border-radius: 50%;
 }
+
 .icon-icon {
   fill: #f4f4fd;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+}
 .social {
   width: 208px;
   display: block;
