--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,7 @@ p {
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-item:hover,
