--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,8 @@ p {
 
 /* SECTION 1 */
 .section-one {
+  display: flex;
+  margin:auto;
   background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
@@ -228,16 +230,17 @@ p {
  width: 40px;
  height: 40px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+ background-color: color var(#4d5ae5);
 }
 
 .link-icon {
-   width: 100%;
-   height: 100%;
-   background-color: color var(#4d5ae5);
-   border-radius: 50%;
-   display: flex;
+  display: flex;
    align-items: center;
    justify-content: center;
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
+   background-color: #4d5ae5;
 }
 
 .link-icon:hover,
