--- a/css/styles.css
+++ b/css/styles.css
@@ -231,6 +231,7 @@ p {
  height: 40px;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
  background-color: color var(#4d5ae5);
+ margin-top: 8px;
 }
 
 .link-icon {
