--- a/css/styles.css
+++ b/css/styles.css
@@ -137,7 +137,7 @@ p {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office1.jpg);
-  width: 1158px;
+  max-width: 1440px; 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
