--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ p {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-  }
+}
 .navigation {
   display: flex;
   align-items: center;
@@ -128,7 +128,7 @@ p {
 /* SECTION 1 */
 .section-one {
   display: flex;
-  margin:auto;
+  margin: auto;
   background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
@@ -137,7 +137,7 @@ p {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/people-office1.jpg);
-  max-width: 1440px; 
+  max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -219,40 +219,40 @@ p {
   border: 1px;
   border-color: #8e8f99;
   border-radius: 4px;
-  margin-bottom: 8px; 
+  margin-bottom: 8px;
 }
 
 .icon-list {
- display: flex;
- justify-content: center; 
- gap: 24px; 
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 
 .icon-link {
- width: 40px;
- height: 40px;
- transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
- background-color: color var(#4d5ae5);
- margin-top: 8px;
+  width: 40px;
+  height: 40px;
+  background-color: color var(#4d5ae5);
+  transition-property: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-top: 8px;
 }
 
 .link-icon {
   display: flex;
-   align-items: center;
-   justify-content: center;
-   width: 100%;
-   height: 100%;
-   border-radius: 50%;
-   background-color: #4d5ae5;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
 }
 
 .link-icon:hover,
 .link-icon:focus {
-background-color: #404bbf;  
+  background-color: #404bbf;
 }
 
 .icon-icon {
-   fill:#f4f4fd; 
+  fill: #f4f4fd;
 }
 
 .s-header-three {
@@ -306,7 +306,8 @@ background-color: #404bbf;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   width: calc((100% - 48px) / 3);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .worker-info {
@@ -345,9 +346,9 @@ background-color: #404bbf;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 .s-four-list-item:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
 }
 
@@ -384,26 +385,34 @@ background-color: #404bbf;
 }
 
 .im-app {
-  position: relative; 
+  position: relative;
   overflow: hidden;
   width: 360px;
   height: 300px;
-  background-color: #4D5AE5;
 }
-.section-four-pp {
-display: flex;
-position: absolute;
-top: 0;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color:var(--CLOUD, #f4f4fd);
-padding: 40px 32px;
-height: 100%;
-width: 100%; 
-transform: translateY(100%); 
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+
+.overlay {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--CLOUD, #f4f4fd);
+  background-color: #4d5ae5;
+  padding: 40px 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.im-app:hover .overlay {
+  transform: translateY(0);
+}
+
 /* FOOTER */
 
 .footer {
@@ -415,9 +424,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-container {
-   display: flex;
-   align-items: baseline;
-   margin-right: 120px;
+  display: flex;
+  align-items: baseline;
+  margin-right: 120px;
 }
 
 .logo-blu-footer {
@@ -477,4 +486,5 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   line-height: 24px;
   letter-spacing: 0.02em;
   text-align: left;
+  color: #f4f4fd;
 }
