--- a/css/styles.css
+++ b/css/styles.css
@@ -231,8 +231,6 @@ p {
 .icon-link {
   width: 40px;
   height: 40px;
-  background-color: color var(#4d5ae5);
-  transition-property: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-top: 8px;
 }
 
@@ -243,7 +241,8 @@ p {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #4d5ae5;
+  background-color: color var(#4d5ae5);
+  transition-property: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-icon:hover,
@@ -410,7 +409,7 @@ p {
 }
 
 .im-app:hover .overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
 }
 
 /* FOOTER */
