--- a/css/styles.css
+++ b/css/styles.css
@@ -228,12 +228,10 @@ p {
   gap: 24px;
 }
 
-.icon-link {
+.icon-list-item {
   width: 40px;
   height: 40px;
   margin-top: 8px;
-  background-color: color var(#4d5ae5);
-  transition-property: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-icon {
@@ -243,10 +241,12 @@ p {
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link-icon:hover,
-.link-icon:focus {
+.icon-list-item :hover,
+.icon-list-item :focus {
   background-color: #404bbf;
 }
 
