--- a/css/styles.css
+++ b/css/styles.css
@@ -416,17 +416,21 @@ p {
 /* FOOTER */
 
 .footer {
+  display: flex;
+  align-items: baseline;
   background-color: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
+  width: 1440px;
 }
 
 .footer-container {
-  display: flex;
-  align-items: baseline;
-  /* margin-right: 120px; */
+  /* display: flex;
+  align-items: baseline; */
+  margin-right: 120px;
+  max-width: 1440px;
   /* margin-left: 156px; */
-  /* padding-left: 156px; */
+  padding-left: 156px;
   /* width: 264px; */
 }
 
