--- a/css/styles.css
+++ b/css/styles.css
@@ -457,14 +457,19 @@ p {
   letter-spacing: 0.02em;
   max-width: 264px;
 }
-.icon-list {
+.icon-list-footer {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  gap: 16px;
   margin-top: 8px;
 }
 
-.icon-link {
+.icon-list-item-footer :hover,
+.icon-list-item-footer :focus {
+  background-color: #31d0aa;
+}
+
+/* .icon-link {
   height: 40px;
   width: 40px;
   display: flex;
@@ -472,9 +477,9 @@ p {
   align-items: center;
   background-color: #4d5ae5;
   border-radius: 50%;
-}
+} */
 
-.icon-icon {
+.icon-icon-footer {
   fill: #f4f4fd;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -493,5 +498,6 @@ p {
   line-height: 24px;
   letter-spacing: 0.02em;
   text-align: left;
-  color: #f4f4fd;
+  color: #ffffff;
+  margin-bottom: 16px;
 }
